# snail-orbit

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  Dockerfile  Pipfile  README.md  lint.py  manage.py  pyproject.toml
.docker/: .gitignore  docker-compose.yaml.example
.docker/etc/: settings.toml.example
app/: .dockerignore  .gitignore  Dockerfile  apply_format.sh  lint.py  manage.py  openapi.json  pyproject.toml
app/migrations/versions/: 20250223204927_cf_groups.py  20250223215034_cf_value_unification.py  20250430041628_save_states.py  20250605063753_cf_group_links_in_boards.py  20250617180000_board_issues_order_relationships.py  20250618200450_add_aliases_to_text_index.py  20250619120000_comprehensive_indexing_strategy.py  20250716000000_add_issue_permissions.py  20250723000000_add_tag_permissions.py  20250808022412_group_system_refactor.py  20250814230656_reports_axis_system.py  20250815000000_populate_updated_fields.py  20250819000000_add_favorite_of_field.py
app/pm/: cache.py  config.py  constants.py  enums.py  permissions.py  version.py
app/pm/api/: app.py  context.py  error_handlers.py  events_bus.py  exceptions.py  request_ctx.py
app/pm/api/helpers/: issue_validation.py  user.py
app/pm/api/issue_query/: __init__.py  _base.py  parse_logical_expression.py  search.py  sort.py
app/pm/api/logging/: __init__.py  context.py
app/pm/api/middleware/: __init__.py  request_id.py  request_logging.py
app/pm/api/routes/: __init__.py
app/pm/api/routes/api/: __init__.py  avatar.py
app/pm/api/routes/api/auth/: __init__.py  oidc.py
app/pm/api/routes/api/v1/: __init__.py  activity.py  board.py  custom_field.py  dashboard.py  files.py  global_role.py  group.py  profile.py  project.py  report.py  role.py  search.py  tag.py  user.py  user_group.py  version.py  workflow.py
app/pm/api/routes/api/v1/admin/: __init__.py  user.py
app/pm/api/routes/api/v1/issue/: __init__.py  _utils.py  comment.py  feed.py  filters.py  history.py  issue.py  spent_time.py
app/pm/api/routes/api/v1/settings/: __init__.py  api_token.py  encryption_key.py  mfa.py  ui_settings.py
app/pm/api/routes/api/v2/: __init__.py  board.py
app/pm/api/routes/events/: __init__.py  _base.py  issue.py
app/pm/api/search/: issue.py  parse_logical_expression.py
app/pm/api/utils/: jwt_validator.py  query_params.py  router.py
app/pm/api/views/: custom_fields.py  encryption.py  encryption_key.py  error_responses.py  global_role.py  group.py  issue.py  output.py  params.py  permission.py  project.py  query_builder.py  report.py  role.py  select.py  tag.py  user.py
app/pm/cli/: api.py  db.py  encryption.py  ocr.py  tasks.py  user.py  workflow.py
app/pm/db/: __init__.py  version.py
app/pm/email_templates/: __init__.py
app/pm/email_templates/templates/: invite.html.jinja
app/pm/logging/: __init__.py  config.py  context.py  formatters.py  middleware.py  setup.py  structured.py
app/pm/models/: __init__.py  _audit.py  _encryption.py  board.py  custom_fields.py  dashboard.py  global_role.py  group.py  issue.py  permission.py  project.py  report.py  role.py  search.py  tag.py  user.py  workflow.py
app/pm/models/custom_fields/: __init__.py  _base.py  enum_cf.py  owned_cf.py  plain.py  sprint_cf.py  state_cf.py  user_cf.py  version_cf.py
app/pm/ocr/: app.py
app/pm/patches/: beanie_links.py
app/pm/services/: avatars.py  files.py  issue.py
app/pm/tasks/: _base.py  app.py  batch_processor.py  types.py
app/pm/tasks/actions/: __init__.py  notification_batch.py  notify.py  ocr_process.py  send_email.py  send_pararam_message.py  workflows.py
app/pm/tasks/logging/: __init__.py  context.py
app/pm/tasks/scheduled/: __init__.py  wb_sync.py  wb_user_sync.py  workflows.py
app/pm/templates/: __init__.py
app/pm/templates/templates/: invite-pararam.md.jinja
app/pm/utils/: dateutils.py  document.py  encryption.py  events_bus.py  image.py  mentions.py  mongo_filter.py  ocr_client.py  oidc.py  pydantic_uuid.py  wb.py
app/pm/utils/cache/: __init__.py  config.py  decorators.py  provider.py  redis.py  registry.py  serializers.py
app/pm/utils/file_storage/: _base.py  local.py  s3.py  utils.py
app/pm/workflows/: __init__.py
app/tests/: conftest.py  test_encryption_utils.py
app/tests/api/: conftest.py  create.py  custom_fields.py  helpers.py  test_api.py  test_attachment.py  test_board_api.py  test_custom_field_api.py  test_dashboard_api.py  test_group_api.py  test_issue_attachments.py  test_issue_permissions.py  test_project_api.py  test_query_builder.py  test_report_api.py  test_role_api.py  test_user_api.py
app/tests/api/acl/: __init__.py  helpers.py  test_acl_global_permissions.py  test_acl_issue_permissions.py  test_acl_project_permissions.py  test_direct_sharing_permissions.py  test_inheritance_endpoints.py  test_permission_resolution.py
app/tests/api/admin/: __init__.py  helpers.py  test_admin_user_api.py
app/tests/mongo_filter/: test_mongo_filter.py  test_sort.py
app/tests/router/: test_response_merging.py
app/tests/search/: _mock.py  test_search.py
app/tests/tasks/: test_task_integration.py
app/tests/utils/: aiofiles_fake.py  avatar.py  dict_utils.py  encryption.py  test_mentions.py
client-libs/py/: .gitignore  README.md  pyproject.toml
client-libs/py/scripts/: generate_models.py
client-libs/py/snail_orbit_client/models/: __init__.py  auth.py  issues.py
contrib/helpers/: bump_version.py  release_diff.py  version_mgmt.py
docs/: Dockerfile
docs/contrib/: quartz.config.ts  quartz.layout.ts
docs/dev/: ACL_SYSTEM_DOCUMENTATION.md
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  env.template.js  i18next-parser.config.js  i18next-parsser.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsr.config.json  vite.config.ts
migrations/: alembic.ini  env.py
pm/: config.py  constants.py  permissions.py
services/ocr/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/ocr/ocr/: config.py  constants.py  worker.py
(+1077 files in other folders)
