[project]
name = "snail-orbit"
description = "Snail Orbit project manager"
authors = [
    { name = "StarSoultion Dev Team", "email" = "dev@starsolution.team" },
]
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "*"
fastapi = "*"
dynaconf = "*"
uvicorn = "*"
starlette-context = "*"
starsol-fastapi-jwt-auth = {extras = ["asymmetric"], version = "*"}
pydantic = {version = ">=2.0"}
motor = "*"
beanie = ">=1.29.0"
pyparsing = "*"
aiofiles = "*"
python-multipart = "*"
redis = "*"
aiohttp = "*"
authlib = "*"
httpx = "*"
itsdangerous = "*"
taskiq = "*"
taskiq-aio-pika = "*"
pillow = "*"
pararamio = {version = ">=2.0.1"}
lark = "*"
elasticsearch = {version = "==8.15.1", extras = ["async"]}
aioboto3 = "==13.3.0"
croniter = "^5.0.1"
cryptography = "*"
starsol-otp = "==1.0.0"
jinja2 = "*"
sentry-sdk = {version = "*", extras = ["fastapi", "starlette"]}
pyinstrument = "*"
starsol-mongo-migrate = "==0.2.0"

[tool.poetry.group.dev.dependencies]
bandit = "*"
mypy = "*"
pylint = "*"
ruff = "*"
types-aiofiles = "*"
types-redis = "*"
types-aioboto3 = {version = "*", extras = ["aioboto3"]}
faker = "*"
mock = "*"
pytest = "*"
pytest-asyncio = "*"
httpx = "*"
pyfakefs = "*"
pytest-cov = "*"
pre-commit = "*"
deepdiff = "*"
fakeredis = "*"

[tool.poetry.group.ocr]
optional = true

[tool.poetry.group.ocr.dependencies]
easyocr = "*"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
quote-style = "single"


[tool.pylint.FORMAT]
max-line-length = 160

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-public-methods",
    "too-many-return-statements",
    "broad-exception-caught",
    "duplicate-code",
    "fixme",
]


[tool.bandit.assert_used]
skips = ["*/tests/*"]


[tool.pytest.ini_options]
addopts = "-p no:warnings -v --color=yes"
asyncio_default_fixture_loop_scope = "function"
markers = []
