[project]
name = "snail-orbit-client"
version = "0.0.0"
description = "Type-safe Python client for Snail Orbit project management system with read operations and issue management"
authors = [
    { name = "Snail Orbit Team", email = "dev@snorbit.app" }
]
readme = "README.md"
keywords = ["snail-orbit", "project-management", "api-client", "task-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pyjwt[crypto]>=2.8.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["snail_orbit_client"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "bandit[toml]>=1.7.0",
    "datamodel-code-generator>=0.22.0",
    "twine>=6.1.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "TCH003", # Type checking imports (auto-generated code issues)
    "TCH001", # Move application imports to type-checking
    "F821",  # Undefined name (docstring references)
    "F841",  # Local variable assigned but never used
    "SIM102", # Use single if statement (complex conditionals)
    "SIM105", # Use contextlib.suppress
    "UP028", # Replace yield over for loop (async compatibility)
    "F403", # Star imports in generated files
    "F811", # Redefinition in generated files
    "ARG003", # Unused class method argument
]

[tool.ruff.lint.per-file-ignores]
"snail_orbit_client/generated/*" = [
    "TCH003",  # Type checking imports in generated files
    "F811",   # Redefined names in generated files
    "ALL",    # Ignore all linting for generated files
]

[tool.ruff.lint.isort]
known-first-party = ["snail_orbit_client"]
force-single-line = false

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
exclude = ["snippets/"]

[[tool.mypy.overrides]]
module = ["snail_orbit_client.generated.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["snail_orbit_client.models.issues"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["snail_orbit_client.core.transport"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["snail_orbit_client.client"]
ignore_errors = true

[tool.bandit]
skips = ["B101"]  # Skip assert_used test
